tests/072_invalid_lvalues.err
pirxc compilation failed: exit status 1
Output: error parsing program: tests/072_invalid_lvalues.pirx:6:5: invalid assignment target: 42
Error: exit status 1
